# BuyThem

./: .gitignore  README.md
client-web/: .dockerignore  Dockerfile  nuxt.config.js  package.json  tailwind.config.js
client-web/api/: cryptography.js  storage.js
client-web/assets/css/: tailwind.css
client-web/components/: AlbumItem.vue  AlbumList.vue  CreateItem.vue  Footer.vue  ImgFromIPFS.vue  LoginPage.vue  Logo.vue  NavMenu.vue  NearSessionButton.vue  TopBar.vue  TransitionOpacity.vue
client-web/components/Icons/: IconArrow.vue  IconArrowHorizontal.vue  IconClose.vue  IconLocked.vue  IconNear.vue  IconSpinnerLoading.vue
client-web/components/Modal/: Modal.vue  ModalViewMedia.vue
client-web/lang/: en_US.js
client-web/layouts/: default.vue  error.vue
client-web/near/: config.js  interface.js
client-web/pages/: index.vue  purchases.vue  wip.vue
client-web/pages/profile/: me.vue
client-web/plugins/: axios.js
client-web/store/: index.js  items.js  navigation.js  near.js  purchases.js  storage.js
contract/: Cargo.toml
contract/src/: item.rs  lib.rs
