[package]
name = "buythem"
version = "0.1.0"
edition = "2021"
authors = ["Miguel Mendes <miguelangello13@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#near-sdk = "4.0.0-pre.5"
near-sdk = "4.0.0-pre.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
near-sdk-sim = "3.1.0"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = true
panic = "abort"
overflow-checks = true
